--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,7 +1,7 @@
 .header {
-    border-radius: 17px;
+    border-radius: 15px;
     background: gray;
-    padding: 10px;
+    padding: 5px;
     display: flex;
   }
 
@@ -23,10 +23,9 @@ font-family: 'Merriweather Sans', sans-serif;
 
   .container{ 
     text-align: center;
-   background-color: gray;
-    border-radius: 20px;
-    background-clip: content-box;
-    
+    background-color: gray;
+    border-radius: 25px;
+
     height: 20em;
      width: 20em; 
      margin-left: auto;
